# starter-templates

fastapi/: .env.example  .gitignore  README.md  commands.py  docker-compose.yml  pyproject.toml
fastapi/src/: main.py
fastapi/src/core/: config.py  logger.py  pagination.py  s3_client.py
fastapi/src/core/errors/: app_error.py  conflict_error.py  not_found_error.py  not_implemented_error.py
fastapi/src/db/: __init__.py
fastapi/src/db/models/: attachment.py  project.py  task.py  user.py
fastapi/src/middleware/: cors.py  error_handler.py  rate_limiter.py
fastapi/src/repositories/: attachment_repository.py  base_repository.py  project_repository.py  task_repository.py
fastapi/src/routes/: attachment_routes.py  project_routes.py  task_routes.py
fastapi/src/schemas/: attachment_schemas.py  common_schemas.py  project_schemas.py  task_schemas.py
fastapi/src/services/: attachment_service.py  project_service.py  task_service.py
golang-http-server/: .air.toml  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  main.go
golang-http-server/internal/core/: config.go  logger.go  pagination.go  s3_client.go
golang-http-server/internal/db/: db.go
golang-http-server/internal/dto/: attachment_dto.go  common_dto.go  project_dto.go  task_dto.go  validation_error.go
golang-http-server/internal/middleware/: cors.go  error_handler.go  logger.go  rate_limiter.go  util.go
golang-http-server/internal/repository/: attachment_repository.go  base_repository.go  project_repository.go  task_repository.go
golang-http-server/internal/routes/: attachment_routes.go  project_routes.go  registry.go  router.go  task_routes.go
golang-http-server/internal/service/: attachment_service.go  project_service.go  task_service.go
hono-bun/: .gitignore  Dockerfile  README.md  drizzle.config.ts  eslint.config.ts  index.ts  package.json  prettier.config.ts  tsconfig.json  vitest.config.ts
hono-node/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
hono-node/src/: env.ts
tanstack-router/: .cta.json  .dockerignore  .env.example  .prettierignore  Dockerfile-bun  Dockerfile-node  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  tsconfig.json  vite.config.ts
tanstack-router/src/: main.tsx  routeTree.gen.ts  styles.css
(+104 files in other folders)
