[project]
name = "api"
version = "0.1.0"
description = "NobleRAG API"
readme = "README.md"
authors = [
    { name = "Mohamed Aziz Karoui", email = "mohamedaziz@noblemind.sa" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bullmq>=2.20.4",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "minio>=7.2.15",
    "neo4j>=5.28.3",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pymilvus>=2.6.12",
    "redis>=6.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
api = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-ignore = [
    "TC001",
    "TC002",
    "TC003",
    "TC005",
    "B008",
    "F821",
    "ANN401",
    "UP046",
]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "ANN",
    "TCH",
    "RUF",
]


[tool.ruff.lint.per-file-ignores]
"*.test.py" = [
    "ANN",
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"

include = ["src"]
exclude = ["**/__pycache__", "**/*.test.py"]

typeCheckingMode = "standard"

reportMissingTypeArgument = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportMissingImports = true
reportMissingModuleSource = false
reportDeprecated = false
reportUndefinedVariable = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["*.test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/__tests__/*", "*.test.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
